Enabling/creating email consumer

--- a/stock-service/stock-service/src/main/resources/application.properties
+++ b/stock-service/stock-service/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 #same topic name as in producer project(order-service project) 
 #so this consumer would know in which topic to expect messages
-spring.kafka.topic.name=order_topics #
+spring.kafka.topic.name=order_topics
